--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,11 @@ html,
 body {
   padding: 0;
   margin: 0;
+  width:100vw;
+  height:100vh;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-size: 20px;
 }
 
 a {
@@ -22,5 +25,28 @@ a {
   body {
     color: white;
     background: black;
+  }
+}
+
+:root {
+  --color-blue: blue;
+}
+
+.loader {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 10px solid var(--color-bg);
+  border-top: 10px solid var(--color-blue);
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
   }
 }
